# DxAssist

./: .env.example  .gitignore  README.md  compose.prod.yaml  compose.yaml  package-lock.json  readme_draft.md
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: api_change.yml  documentation.yml  feature_request.yml  frontend.yml  infra.yml  integration.yml  ml_module.yml  module_spec.yml
.github/rulesets/: master.json  production.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-images.yml.disabled
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/authentication/: serializers.py  views.py
backend/apps/common_commands/management/commands/: createadmin.py  makemockdb.py
backend/apps/users/: admin.py  models.py  serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/settings/: __init__.py  common.py  production.py
docs/: backend_prototype.md  compose.md  prototype_changelog_en.md  prototype_changelog_pl.md
dxassist-backend/: .gitignore  Dockerfile  entrypoint.sh  makefile  pyproject.toml
dxassist-backend/apps/: api_urls.py
dxassist-backend/apps/authentication/: authentication.py
dxassist-backend/apps/common_commands/management/commands/: createadmin.py
dxassist-backend/apps/common_commands/tests/: test_smoke.py
dxassist-backend/apps/diagnostics/: constants.py  models.py  scheduler_client.py  serializers.py  urls.py  views.py
dxassist-backend/apps/diagnostics/tests/: test_scheduler_client.py
dxassist-backend/apps/users/: models.py  views.py
dxassist-backend/apps/users/tests/: test_something.py
dxassist-backend/common/: pagination.py  permissions.py
dxassist-backend/config/settings/: common.py  dev.py  jwt.py  test.py
dxassist-backend/docs/: backend_integration.md
dxassist-frontend/: Dockerfile  package-lock.json  package.json
dxassist-frontend/src/app/: globals.css  layout.tsx  page.tsx
dxassist-frontend/src/app/developer/: page.tsx
dxassist-frontend/src/app/login/: page.tsx
dxassist-frontend/src/components/: AnalysisResult.tsx
dxassist-frontend/src/components/ui/: MedicalInput.tsx
dxassist-frontend/src/context/: AuthContext.tsx
dxassist-frontend/src/lib/: api.ts  diagnosticTypes.ts  utils.ts
dxassist-scheduler/: API.md  Dockerfile  README.md  config.yaml  main.py
models/dxassist-angiography/: Dockerfile  README.md  server.py
models/dxassist-screening/: README.md  server.py
